--- a/native/tests/seal/CMakeLists.txt
+++ b/native/tests/seal/CMakeLists.txt
@@ -10,7 +10,7 @@ target_sources(sealtest
         ${CMAKE_CURRENT_LIST_DIR}/encryptor.cpp
         ${CMAKE_CURRENT_LIST_DIR}/evaluator.cpp
         ${CMAKE_CURRENT_LIST_DIR}/galoiskeys.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/intarray.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/dynarray.cpp
         ${CMAKE_CURRENT_LIST_DIR}/keygenerator.cpp
         ${CMAKE_CURRENT_LIST_DIR}/memorymanager.cpp
         ${CMAKE_CURRENT_LIST_DIR}/modulus.cpp
