--- a/native/tests/SEALTest.vcxproj
+++ b/native/tests/SEALTest.vcxproj
@@ -59,11 +59,11 @@
     <ClCompile Include="seal\ckks.cpp" />
     <ClCompile Include="seal\modulus.cpp" />
     <ClCompile Include="seal\context.cpp" />
+	<ClCompile Include="seal\dynarray.cpp" />
     <ClCompile Include="seal\encryptionparams.cpp" />
     <ClCompile Include="seal\encryptor.cpp" />
     <ClCompile Include="seal\evaluator.cpp" />
     <ClCompile Include="seal\galoiskeys.cpp" />
-    <ClCompile Include="seal\intarray.cpp" />
     <ClCompile Include="seal\keygenerator.cpp" />
     <ClCompile Include="seal\memorymanager.cpp" />
     <ClCompile Include="seal\plaintext.cpp" />
