--- a/native/src/seal/util/config.h.in
+++ b/native/src/seal/util/config.h.in
@@ -22,6 +22,7 @@
 // Security
 #cmakedefine SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT
 #cmakedefine SEAL_USE_GAUSSIAN_NOISE
+#cmakedefine SEAL_DEFAULT_PRNG @SEAL_DEFAULT_PRNG@
 
 // Intrinsics
 #cmakedefine SEAL_USE_INTRIN
