Fixed static library build and removed linking with zlib/zstd.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ if(SEAL_USE_MSGSL)
         if (SEAL_BUILD_DEPS)
             message(STATUS "Download Microsoft.GSL ...")
             include(ExternalMSGSL)
-            set(GSL "GSL")
+            set(GSL "Microsoft.GSL::GSL")
         else()
             message(FATAL_ERROR "Failed to find Microsoft.GSL.")
         endif()
@@ -324,6 +324,7 @@ endif()
 set(SEAL_SOURCE_FILES "")
 add_subdirectory(native/src/seal)
 
+# ${SEAL_LIB} is the alias of either seal or seal_shared
 if(NOT BUILD_SHARED_LIBS)
     add_library(seal STATIC ${SEAL_SOURCE_FILES})
     seal_set_version_filename(seal)
@@ -347,20 +348,28 @@ endif()
 
 # ZLIB and ZSTD are made part of the link interface,
 # unless SEAL downloaded and built them in which case archives are combined to SEAL static library.
-if(NOT BUILD_SHARED_LIBS AND SEAL_USE_ZLIB AND NOT ZLIB_FOUND AND SEAL_BUILD_DEPS AND NOT MSVC)
-    target_link_libraries(${SEAL_LIB} PRIVATE ${ZLIB})
-    seal_combine_archives(seal ${ZLIB})
-else()
-    target_link_libraries(${SEAL_LIB} PUBLIC ${ZLIB})
+if(SEAL_USE_ZLIB AND NOT MSVC)
+    if(NOT ZLIB_FOUND)
+        add_dependencies(${SEAL_LIB} ${ZLIB})
+        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
+        if(NOT BUILD_SHARED_LIBS)
+            seal_combine_archives(seal ${ZLIB})
+        endif()
+    else()
+        target_link_libraries(${SEAL_LIB} PRIVATE ${ZLIB})
+    endif()
 endif()
-
-if(NOT BUILD_SHARED_LIBS AND SEAL_USE_ZLIB AND NOT ZLIB_FOUND AND SEAL_BUILD_DEPS AND NOT MSVC)
-    target_link_libraries(${SEAL_LIB} PRIVATE ${ZSTD})
-    target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${SEAL_ZSTD_INCLUDE_DIRS}>)
-    seal_combine_archives(seal ${ZSTD})
-else()
-    target_link_libraries(${SEAL_LIB} PUBLIC ${ZSTD})
-    target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${SEAL_ZSTD_INCLUDE_DIRS}>)
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    if(NOT ZSTD_FOUND)
+        add_dependencies(${SEAL_LIB} ${ZSTD})
+        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
+        if(NOT BUILD_SHARED_LIBS)
+           seal_combine_archives(seal ${ZSTD})
+        endif()
+    else()
+        target_link_libraries(${SEAL_LIB} PRIVATE ${ZSTD})
+    endif()
 endif()
 
 #########################
@@ -447,7 +456,7 @@ option(SEAL_BUILD_EXAMPLES ${SEAL_BUILD_EXAMPLES_OPTION_STR} OFF)
 if(SEAL_BUILD_EXAMPLES)
     add_executable(sealexamples)
     add_subdirectory(native/examples)
-    target_link_libraries(sealexamples PRIVATE seal ${GSL} ${ZLIB} ${ZSTD})
+    target_link_libraries(sealexamples PRIVATE ${SEAL_LIB})
 endif()
 
 ##################
@@ -461,7 +470,7 @@ option(SEAL_BUILD_TESTS ${SEAL_BUILD_TESTS_OPTION_STR} OFF)
 if(SEAL_BUILD_TESTS)
     add_executable(sealtest)
     add_subdirectory(native/tests/seal)
-    target_link_libraries(sealtest PRIVATE seal ${GSL} ${ZLIB} ${ZSTD} ${GTEST})
+    target_link_libraries(sealtest PRIVATE ${SEAL_LIB} ${GTEST})
 endif()
 
 #######################################
