Used SEAL_BUILD_DEPS (default OFF) to force downloading dependencies, combine archives, install GSL, and remove linkage from config files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,15 +138,12 @@ endfunction()
 set(SEAL_USE_MSGSL_OPTION_STR "Use Microsoft GSL")
 option(SEAL_USE_MSGSL ${SEAL_USE_MSGSL_OPTION_STR} ON)
 if(SEAL_USE_MSGSL)
-    find_package(Microsoft.GSL CONFIG)
-    if(Microsoft.GSL_FOUND)
-        set(GSL "Microsoft.GSL::GSL")
+    if(SEAL_BUILD_DEPS)
+        message(STATUS "Download Microsoft.GSL ...")
+        include(ExternalMSGSL)
     else()
-        if (SEAL_BUILD_DEPS)
-            message(STATUS "Download Microsoft.GSL ...")
-            include(ExternalMSGSL)
-            set(GSL "Microsoft.GSL::GSL")
-        else()
+        find_package(Microsoft.GSL CONFIG)
+        if(NOT Microsoft.GSL_FOUND)
             message(FATAL_ERROR "Failed to find Microsoft.GSL.")
         endif()
     endif()
@@ -156,15 +153,12 @@ endif()
 set(SEAL_USE_ZLIB_OPTION_STR "Use ZLIB for compressed serialization")
 option(SEAL_USE_ZLIB ${SEAL_USE_ZLIB_OPTION_STR} ON)
 if(SEAL_USE_ZLIB)
-    find_package(ZLIB 1.2.11)
-    if(ZLIB_FOUND)
-        set(ZLIB "ZLIB::ZLIB")
+    if(SEAL_BUILD_DEPS)
+        message(STATUS "Download ZLIB ...")
+        include(ExternalZLIB)
     else()
-        if (SEAL_BUILD_DEPS)
-            message(STATUS "Download ZLIB ...")
-            include(ExternalZLIB)
-            set(ZLIB "zlibstatic")
-        else()
+        find_package(ZLIB 1.2.11)
+        if(NOT ZLIB_FOUND)
             message(FATAL_ERROR "Failed to find ZLIB")
         endif()
     endif()
@@ -174,15 +168,12 @@ endif()
 set(SEAL_USE_ZSTD_OPTION_STR "Use Zstandard for compressed serialization")
 option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
 if(SEAL_USE_ZSTD)
-    find_package(zstd CONFIG)
-    if(zstd_FOUND)
-        set(ZSTD "libzstd")
+    if(SEAL_BUILD_DEPS)
+        message(STATUS "Download ZSTD ...")
+        include(ExternalZSTD)
     else()
-        if (SEAL_BUILD_DEPS)
-            message(STATUS "Download ZSTD ...")
-            include(ExternalZSTD)
-            set(ZSTD "libzstd_static")
-        else()
+        find_package(zstd CONFIG)
+        if(NOT zstd_FOUND)
             message(FATAL_ERROR "Failed to find ZSTD")
         endif()
     endif()
@@ -190,15 +181,13 @@ endif()
 
 # if SEAL_BUILD_TESTS is ON, use googletest
 if(SEAL_BUILD_TESTS)
-    find_package(GTest 1.10.0 CONFIG)
-    if(GTest_FOUND)
-        set(GTEST "GTest::gtest")
+    if (SEAL_BUILD_DEPS)
+        message(STATUS "Download GTest ...")
+        include(ExternalGTest)
+        add_library(GTest::gtest ALIAS gtest)
     else()
-        if (SEAL_BUILD_DEPS)
-            message(STATUS "Download GTest ...")
-            include(ExternalGTest)
-            set(GTEST "gtest")
-        else()
+        find_package(GTest 1.10.0 CONFIG)
+        if(NOT GTest_FOUND)
             message(FATAL_ERROR "Failed to find GTest")
         endif()
     endif()
@@ -324,51 +313,77 @@ endif()
 set(SEAL_SOURCE_FILES "")
 add_subdirectory(native/src/seal)
 
-# ${SEAL_LIB} is the alias of either seal or seal_shared
+# Build only a static library
 if(NOT BUILD_SHARED_LIBS)
     add_library(seal STATIC ${SEAL_SOURCE_FILES})
     seal_set_version_filename(seal)
-    set(SEAL_LIB "seal")
+    seal_set_language(seal)
+    seal_set_include_directories(seal)
+    seal_set_version(seal)
+    seal_link_threads(seal)
+    seal_install_target(seal SEALTargets)
+
+    if(SEAL_USE_MSGSL AND NOT MSVC)
+        if(SEAL_BUILD_DEPS)
+            target_include_directories(seal PUBLIC $<BUILD_INTERFACE:${msgsl_SOURCE_DIR}/include>)
+        else()
+            target_link_libraries(seal PUBLIC Microsoft.GSL::GSL)
+        endif()
+    endif()
+
+    if(SEAL_USE_ZLIB)
+        if(SEAL_BUILD_DEPS)
+            add_dependencies(seal zlibstatic)
+            #target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
+            seal_combine_archives(seal zlibstatic)
+        else()
+            target_link_libraries(seal PRIVATE ZLIB::ZLIB)
+        endif()
+    endif()
+
+    if(SEAL_USE_ZSTD)
+        if(SEAL_BUILD_DEPS)
+            add_dependencies(seal libzstd_static)
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
+            seal_combine_archives(seal libzstd_static)
+        else()
+            target_link_libraries(seal PRIVATE libzstd)
+        endif()
+    endif()
+
+# Build only a shared library
 else()
     add_library(seal_shared SHARED ${SEAL_SOURCE_FILES})
     seal_set_soversion(seal_shared)
     set_target_properties(seal_shared PROPERTIES OUTPUT_NAME seal)
-    set(SEAL_LIB "seal_shared")
-endif()
-seal_set_language(${SEAL_LIB})
-seal_set_include_directories(${SEAL_LIB})
-seal_set_version(${SEAL_LIB})
-seal_link_threads(${SEAL_LIB})
-seal_install_target(${SEAL_LIB} SEALTargets)
+    seal_set_language(seal_shared)
+    seal_set_include_directories(seal_shared)
+    seal_set_version(seal_shared)
+    seal_link_threads(seal_shared)
+    seal_install_target(seal_shared SEALTargets)
 
-# MSGSL is always made part of the link interface.
-if(SEAL_USE_MSGSL AND NOT MSVC)
-    target_link_libraries(${SEAL_LIB} PUBLIC ${GSL})
-endif()
-
-# ZLIB and ZSTD are made part of the link interface,
-# unless SEAL downloaded and built them in which case archives are combined to SEAL static library.
-if(SEAL_USE_ZLIB AND NOT MSVC)
-    if(NOT ZLIB_FOUND)
-        add_dependencies(${SEAL_LIB} ${ZLIB})
-        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
-        if(NOT BUILD_SHARED_LIBS)
-            seal_combine_archives(seal ${ZLIB})
-        endif()
-    else()
-        target_link_libraries(${SEAL_LIB} PRIVATE ${ZLIB})
+    if(SEAL_USE_MSGSL AND NOT MSVC)
+        target_link_libraries(seal_shared PUBLIC Microsoft.GSL::GSL)
     endif()
-endif()
-if(SEAL_USE_ZSTD AND NOT MSVC)
-    if(NOT ZSTD_FOUND)
-        add_dependencies(${SEAL_LIB} ${ZSTD})
-        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
-        target_include_directories(${SEAL_LIB} PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
-        if(NOT BUILD_SHARED_LIBS)
-           seal_combine_archives(seal ${ZSTD})
+
+    if(SEAL_USE_ZLIB)
+        if(SEAL_BUILD_DEPS)
+            add_dependencies(seal_shared zlibstatic)
+            #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
+        else()
+            target_link_libraries(seal_shared PRIVATE ZLIB::ZLIB)
         endif()
-    else()
-        target_link_libraries(${SEAL_LIB} PRIVATE ${ZSTD})
+    endif()
+
+    if(SEAL_USE_ZSTD)
+        if(SEAL_BUILD_DEPS)
+            add_dependencies(seal_shared libzstd_static)
+            #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+            #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
+        else()
+            target_link_libraries(seal_shared PRIVATE libzstd)
+        endif()
     endif()
 endif()
 
@@ -397,7 +412,11 @@ if(SEAL_BUILD_SEAL_C)
     seal_set_language(sealc)
     seal_set_include_directories(sealc)
 
-    target_link_libraries(sealc PUBLIC seal ${GSL} ${ZLIB} ${ZSTD})
+    if(NOT BUILD_SHARED_LIBS)
+        target_link_libraries(sealc PUBLIC seal)
+    else()
+        target_link_libraries(sealc PUBLIC seal_shared)
+    endif()
 
     seal_install_target(sealc SEALTargets)
 endif()
@@ -445,6 +464,16 @@ export(
     NAMESPACE SEAL::
     FILE ${SEAL_TARGETS_FILENAME})
 
+# In UNIX-like platforms install MSGSL header files if SEAL_BUILD_DEPS is ON
+if(SEAL_USE_MSGSL AND SEAL_BUILD_DEPS AND NOT MSVC)
+    install(
+        DIRECTORY
+            ${msgsl_SOURCE_DIR}/include/gsl
+        DESTINATION
+            ${SEAL_INCLUDES_INSTALL_DIR}
+    )
+endif()
+
 #####################
 # SEAL C++ examples #
 #####################
@@ -456,7 +485,11 @@ option(SEAL_BUILD_EXAMPLES ${SEAL_BUILD_EXAMPLES_OPTION_STR} OFF)
 if(SEAL_BUILD_EXAMPLES)
     add_executable(sealexamples)
     add_subdirectory(native/examples)
-    target_link_libraries(sealexamples PRIVATE ${SEAL_LIB})
+    if(NOT BUILD_SHARED_LIBS)
+        target_link_libraries(sealexamples PRIVATE seal)
+    else()
+        target_link_libraries(sealexamples PRIVATE seal_shared)
+    endif()
 endif()
 
 ##################
@@ -470,7 +503,11 @@ option(SEAL_BUILD_TESTS ${SEAL_BUILD_TESTS_OPTION_STR} OFF)
 if(SEAL_BUILD_TESTS)
     add_executable(sealtest)
     add_subdirectory(native/tests/seal)
-    target_link_libraries(sealtest PRIVATE ${SEAL_LIB} ${GTEST})
+    if(NOT BUILD_SHARED_LIBS)
+        target_link_libraries(sealtest PRIVATE seal GTest::gtest)
+    else()
+        target_link_libraries(sealtest PRIVATE seal_shared GTest::gtest)
+    endif()
 endif()
 
 #######################################
