A small fix to make Windows CI pipeline work.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -331,7 +331,7 @@ if(NOT BUILD_SHARED_LIBS)
         endif()
     endif()
 
-    if(SEAL_USE_ZLIB)
+    if(SEAL_USE_ZLIB AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal zlibstatic)
             #target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
@@ -341,7 +341,7 @@ if(NOT BUILD_SHARED_LIBS)
         endif()
     endif()
 
-    if(SEAL_USE_ZSTD)
+    if(SEAL_USE_ZSTD AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal libzstd_static)
             target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
@@ -367,7 +367,7 @@ else()
         target_link_libraries(seal_shared PUBLIC Microsoft.GSL::GSL)
     endif()
 
-    if(SEAL_USE_ZLIB)
+    if(SEAL_USE_ZLIB AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal_shared zlibstatic)
             #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zlib_SOURCE_DIR}>)
@@ -376,7 +376,7 @@ else()
         endif()
     endif()
 
-    if(SEAL_USE_ZSTD)
+    if(SEAL_USE_ZSTD AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal_shared libzstd_static)
             #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
