Fixed windows build failure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,7 +349,6 @@ if(NOT BUILD_SHARED_LIBS)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal libzstd_static)
             target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
-            target_include_directories(seal PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
             seal_combine_archives(seal libzstd_static)
         else()
             target_link_libraries(seal PRIVATE libzstd)
@@ -383,7 +382,7 @@ else()
     if(SEAL_USE_ZSTD AND NOT MSVC)
         if(SEAL_BUILD_DEPS)
             add_dependencies(seal_shared libzstd_static)
-            #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
+            target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib>)
             #target_include_directories(seal_shared PRIVATE $<BUILD_INTERFACE:${zstd_SOURCE_DIR}/lib/common>)
         else()
             target_link_libraries(seal_shared PRIVATE libzstd)
